init du diapo ML

--- a/inst/diapoML/plan presentation.html
+++ b/inst/diapoML/plan presentation.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Introduction au machine Learning</title>
+<title>Module 6 : Introduction au machine Learning</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -132,7 +132,7 @@ window.Quarto = {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Introduction au machine Learning</h1>
+<h1 class="title">Module 6 : Introduction au machine Learning</h1>
 </div>
 
 
@@ -185,12 +185,13 @@ Attaching package: 'dplyr'</code></pre>
 </section>
 <section id="diapo-1-cest-quoi-le-machine-learning" class="level2">
 <h2 class="anchored" data-anchor-id="diapo-1-cest-quoi-le-machine-learning">Diapo 1 : c’est quoi le machine learning ?</h2>
-<p>En Français, ça veut dire apprentissage automatique.</p>
+<p>En Français, on parle d’apprentissage automatique : ça fait partie de l’intelligence artificielle.</p>
 <p><img src="IA_ML.png" class="img-fluid"></p>
-<p>L’intelligence artificielle définie par Yann le Cun <span class="citation" data-cites="Cun2019">(<a href="#ref-Cun2019" role="doc-biblioref">Le Cun 2019</a>)</span> : <em>l’intelligence artificielle est la capacité pour une machine d’assurer des taches généralement assurée par les animaux ou les humains : percevoir, raisonner, agit.</em></p>
+<p>L’intelligence artificielle définie par Yann le Cun <span class="citation" data-cites="Cun2019">(<a href="#ref-Cun2019" role="doc-biblioref">Le Cun 2019</a>)</span> : <em>l’intelligence artificielle est la capacité pour une machine d’assurer des tâches généralement assurée par les animaux ou les humains : percevoir, raisonner, agir.</em></p>
 <p>Il y a “la bonne vieille intelligence artificielle” en français, celle pour laquelle un expert explicite toutes les règles qui sont ensuite traduites en langue informatique. Il faut l’expert à côté de l’informaticien qui code, pour lui donner toutes les règles.</p>
 <p>Avec l’intelligence artificielle, on donne à la machine une grande quantité de donnée, et elle va trouver ‘toute seule’ cette règle, c’est pour ça qu’on dit qu’elle apprend. Elle apprend grace à un algorithme qui permet de traiter une (très) grande quantité de donnée pour en faire ressortir un schéma réccurent.</p>
 <p>Le deep learning est un sous domaine du machine learning : globalement, il veut reproduire le cerveau humain grace à des neurones articifiels. très puissant en reconnaissance d’images par exemple.</p>
+<p>Dans ce module d’introduction, on va voir le machine learning, et même juste un domaine de machine learning.</p>
 </section>
 <section id="diapo-2-apprentissage-supervisé-vs-non-supervisé" class="level2">
 <h2 class="anchored" data-anchor-id="diapo-2-apprentissage-supervisé-vs-non-supervisé">Diapo 2 : apprentissage supervisé vs non supervisé</h2>
