--- a/inst/diapoML/intro_ml.html
+++ b/inst/diapoML/intro_ml.html
@@ -455,7 +455,7 @@
 </div>
 </div>
 <aside class="notes">
-<p>En apprentissage non supervisée, les données ne sont pas étiquetées. Le but est de regrouper automatiquement les individus qui se ressemblent, et de leur trouver ensuite un nom qui les rassemblent : par exemple les grands logements vont être ensemble. En apprentissage supervisé, j’ai des données étiquetées (avec un Y) et le but est d’être capable de prédire Y à partir de ces données étiquetées.</p>
+<p>En apprentissage non supervisée, les données ne sont pas étiquetées. Le but est de regrouper automatiquement les individus qui se ressemblent, et de leur trouver ensuite un nom qui les rassemblent : par exemple les grands logements vont être ensemble. Permet de faire de la classification automatique. En apprentissage supervisé, j’ai des données étiquetées (avec un Y) et le but est d’être capable de prédire Y à partir de ces données étiquetées.</p>
 <style type="text/css">
         span.MJX_Assistive_MathML {
           position:absolute!important;
@@ -470,10 +470,186 @@
 </section>
 <section id="but-de-lapprentissage-supervisé" class="slide level2">
 <h2>But de l’apprentissage supervisé</h2>
-<p>IL s’agit de trouver la fonction f qui va le mieux prédire Y en fonction de X1, X2…</p>
+<p>Il s’agit de trouver la fonction f qui va le mieux <strong>prédire</strong> Y en fonction de X1, X2…,Xn</p>
 <p><span class="math display">\[
 Y = f(X_1, X_2, ...,X_n)
 \]</span></p>
+</section>
+<section id="les-étapes-du-machine-learning" class="slide level2">
+<h2>Les étapes du machine learning</h2>
+<ol type="1">
+<li class="fragment"><p>Disposer d’une base de données étiquetée</p></li>
+<li class="fragment"><p>Nettoyer et explorer cette base de données</p></li>
+<li class="fragment"><p>Réserver une partie de la base pour l’apprentissage/test</p></li>
+<li class="fragment"><p>Apprendre des données avec des algorithmes</p></li>
+<li class="fragment"><p>Comparer les performances prédictives de ces algorithmes</p></li>
+<li class="fragment"><p>Chois</p></li>
+</ol>
+</section>
+<section id="apprentissage-avec-la-regression-linéaire" class="slide level2">
+<h2>Apprentissage avec la regression linéaire</h2>
+<div class="columns">
+<div class="column" style="width:60%;">
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<table data-quarto-postprocess="true">
+<thead>
+<tr class="header">
+<th style="text-align: left;" data-quarto-table-cell-role="th"></th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">Y_prix</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">X_surface</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;">logement1</td>
+<td style="text-align: right;">1000</td>
+<td style="text-align: right;">50</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">logement2</td>
+<td style="text-align: right;">800</td>
+<td style="text-align: right;">30</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">logement3</td>
+<td style="text-align: right;">600</td>
+<td style="text-align: right;">25</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">logement4</td>
+<td style="text-align: right;">1000</td>
+<td style="text-align: right;">60</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">logement5</td>
+<td style="text-align: right;">800</td>
+<td style="text-align: right;">35</td>
+</tr>
+</tbody>
+</table>
+
+
+</div>
+</div>
+</div>
+</div><div class="column" style="width:40%;">
+<p>Par MCO, on trouve la fonction f :</p>
+<p><span class="math display">\[
+Y = 416,5 + 10,6 X
+\]</span></p>
+</div>
+</div>
+<aside class="notes">
+<p>Exemple : sur cette base avec une seule variable explicative, par la méthode des MCO (méthode des moindres carrés ordinaires), on peut trouver une droite qui passe au plus près des points du nuage de point (cf module sur les régressions linéaires).</p>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
+</section>
+<section id="estimations-ou-prévisions" class="slide level2">
+<h2>Estimations ou prévisions ?</h2>
+<div class="panel-tabset">
+<ul id="tabset-2" class="panel-tabset-tabby"><li><a data-tabby-default="" href="#tabset-2-1">Estimations</a></li><li><a href="#tabset-2-2">Prévisions</a></li></ul>
+<div class="tab-content">
+<div id="tabset-2-1">
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<table data-quarto-postprocess="true">
+<thead>
+<tr class="header">
+<th style="text-align: left;" data-quarto-table-cell-role="th"></th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">prix</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">surface</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">prix_estime</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;">logement1</td>
+<td style="text-align: right;">1000</td>
+<td style="text-align: right;">50</td>
+<td style="text-align: right;">945.8824</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">logement2</td>
+<td style="text-align: right;">800</td>
+<td style="text-align: right;">30</td>
+<td style="text-align: right;">734.1176</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">logement3</td>
+<td style="text-align: right;">600</td>
+<td style="text-align: right;">25</td>
+<td style="text-align: right;">681.1765</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">logement4</td>
+<td style="text-align: right;">1000</td>
+<td style="text-align: right;">60</td>
+<td style="text-align: right;">1051.7647</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">logement5</td>
+<td style="text-align: right;">800</td>
+<td style="text-align: right;">35</td>
+<td style="text-align: right;">787.0588</td>
+</tr>
+</tbody>
+</table>
+
+
+</div>
+</div>
+</div>
+</div>
+<div id="tabset-2-2">
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<table data-quarto-postprocess="true">
+<thead>
+<tr class="header">
+<th style="text-align: left;" data-quarto-table-cell-role="th"></th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">surface</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">prix_prevu</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;">logement6</td>
+<td style="text-align: right;">45</td>
+<td style="text-align: right;">892.9412</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">logement7</td>
+<td style="text-align: right;">30</td>
+<td style="text-align: right;">734.1176</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">logement8</td>
+<td style="text-align: right;">110</td>
+<td style="text-align: right;">1581.1765</td>
+</tr>
+</tbody>
+</table>
+
+
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
 <div class="quarto-auto-generated-content">
 <div class="footer footer-default">
 
