--- a/inst/diapoML/intro_ml.html
+++ b/inst/diapoML/intro_ml.html
@@ -475,15 +475,16 @@
 Y = f(X_1, X_2, ...,X_n)
 \]</span></p>
 </section>
-<section id="les-étapes-du-machine-learning" class="slide level2">
-<h2>Les étapes du machine learning</h2>
+<section id="les-étapes-de-lapprentissage-supervisé" class="slide level2">
+<h2>Les étapes de l’apprentissage supervisé :</h2>
 <ol type="1">
 <li class="fragment"><p>Disposer d’une base de données étiquetée</p></li>
 <li class="fragment"><p>Nettoyer et explorer cette base de données</p></li>
 <li class="fragment"><p>Réserver une partie de la base pour l’apprentissage/test</p></li>
 <li class="fragment"><p>Apprendre des données avec des algorithmes</p></li>
 <li class="fragment"><p>Comparer les performances prédictives de ces algorithmes</p></li>
-<li class="fragment"><p>Chois</p></li>
+<li class="fragment"><p>Choisir le modèle et l’ajuster sur les données d’apprentissage</p></li>
+<li class="fragment"><p>Mettre en production</p></li>
 </ol>
 </section>
 <section id="apprentissage-avec-la-regression-linéaire" class="slide level2">
