--- a/inst/diapoML/intro_ml.html
+++ b/inst/diapoML/intro_ml.html
@@ -333,13 +333,12 @@
 </div>
 
 </section>
-<section id="cest-quoi-le-machine-learning" class="slide level2">
-<h2>C’est quoi le machine learning ?</h2>
+<section id="cest-quoi-lintelligence-artificielle" class="slide level2">
+<h2>C’est quoi l’intelligence artificielle ?</h2>
 
 <img data-src="IA_ML.png" class="quarto-figure quarto-figure-center r-stretch"><aside class="notes">
 <p>L’intelligence artificielle définie par Yann le Cun <span class="citation" data-cites="Cun2019">[@Cun2019]</span> : <em>l’intelligence artificielle est la capacité pour une machine d’assurer des tâches généralement assurée par les animaux ou les humains : percevoir, raisonner, agir.</em></p>
-<p>Il y a “la bonne vieille intelligence artificielle” en français, celle pour laquelle un expert explicite toutes les règles qui sont ensuite traduites en langue informatique. Il faut l’expert à côté de l’informaticien qui code, pour lui donner toutes les règles.</p>
-<p>Avec l’intelligence artificielle, on donne à la machine une grande quantité de donnée, et elle va trouver ‘toute seule’ cette règle, c’est pour ça qu’on dit qu’elle apprend. Elle apprend grace à un algorithme qui permet de traiter une (très) grande quantité de donnée pour en faire ressortir un schéma réccurent.</p>
+<p>Avec le machine learning, on donne à la machine une grande quantité de donnée, et elle va trouver ‘toute seule’ cette règle, c’est pour ça qu’on dit qu’elle apprend. Elle apprend grace à un algorithme qui permet de traiter une (très) grande quantité de donnée pour en faire ressortir un schéma réccurent.</p>
 <p>Le deep learning est un sous domaine du machine learning : globalement, il veut reproduire le cerveau humain grace à des neurones articifiels. très puissant en reconnaissance d’images par exemple.</p>
 <style type="text/css">
         span.MJX_Assistive_MathML {
@@ -353,6 +352,32 @@
           display:block!important;
       }</style></aside>
 </section>
+<section id="la-bonne-vieille-ia" class="slide level2">
+<h2>“La bonne vieille IA”…</h2>
+
+<img data-src="système_expert.png" class="quarto-figure quarto-figure-center r-stretch"><aside class="notes">
+<p>Il y a “la bonne vieille intelligence artificielle” en français, celle pour laquelle un expert explicite toutes les règles qui sont ensuite traduites en langue informatique. Il faut l’expert à côté de l’informaticien qui code, pour lui donner toutes les règles.</p>
+<p>C’est celle qu’on utilise depuis longtemps, depuis les années 50.</p>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
+</section>
+<section id="vs-lapprentissage-automatique" class="slide level2">
+<h2>…VS l’apprentissage automatique</h2>
+
+<img data-src="machine-learning-entrainement-ia.jpg" class="quarto-figure quarto-figure-center r-stretch"></section>
+<section id="et-le-deep-learning" class="slide level2">
+<h2>et le Deep learning</h2>
+
+<img data-src="reseau_neurones.jpg" class="quarto-figure quarto-figure-center r-stretch"></section>
 <section id="les-différents-types-dapprentissage-automatique" class="slide level2">
 <h2>Les différents types d’apprentissage automatique</h2>
 <ol type="1">
@@ -483,8 +508,7 @@ Y = f(X_1, X_2, ...,X_n)
 <li class="fragment"><p>Réserver une partie de la base pour l’apprentissage/test</p></li>
 <li class="fragment"><p>Apprendre des données avec des algorithmes</p></li>
 <li class="fragment"><p>Comparer les performances prédictives de ces algorithmes</p></li>
-<li class="fragment"><p>Choisir le modèle et l’ajuster sur les données d’apprentissage</p></li>
-<li class="fragment"><p>Mettre en production</p></li>
+<li class="fragment"><p>Choisir le meilleur modèle et le mettre en production</p></li>
 </ol>
 </section>
 <section id="apprentissage-avec-la-regression-linéaire" class="slide level2">
