sauvegarde intermédiaire diapo maj

--- a/inst/diapoML/intro_ml.html
+++ b/inst/diapoML/intro_ml.html
@@ -333,13 +333,11 @@
 </div>
 
 </section>
-<section id="cest-quoi-lintelligence-artificielle" class="slide level2">
-<h2>C’est quoi l’intelligence artificielle ?</h2>
+<section id="non-mais-cest-quoi-en-fait" class="slide level2">
+<h2>Non mais c’est quoi en fait ?</h2>
 
 <img data-src="IA_ML.png" class="quarto-figure quarto-figure-center r-stretch"><aside class="notes">
 <p>L’intelligence artificielle définie par Yann le Cun <span class="citation" data-cites="Cun2019">[@Cun2019]</span> : <em>l’intelligence artificielle est la capacité pour une machine d’assurer des tâches généralement assurée par les animaux ou les humains : percevoir, raisonner, agir.</em></p>
-<p>Avec le machine learning, on donne à la machine une grande quantité de donnée, et elle va trouver ‘toute seule’ cette règle, c’est pour ça qu’on dit qu’elle apprend. Elle apprend grace à un algorithme qui permet de traiter une (très) grande quantité de donnée pour en faire ressortir un schéma réccurent.</p>
-<p>Le deep learning est un sous domaine du machine learning : globalement, il veut reproduire le cerveau humain grace à des neurones articifiels. très puissant en reconnaissance d’images par exemple.</p>
 <style type="text/css">
         span.MJX_Assistive_MathML {
           position:absolute!important;
@@ -372,12 +370,13 @@
 </section>
 <section id="vs-lapprentissage-automatique" class="slide level2">
 <h2>…VS l’apprentissage automatique</h2>
-
-<img data-src="machine-learning-entrainement-ia.jpg" class="quarto-figure quarto-figure-center r-stretch"></section>
-<section id="et-le-deep-learning" class="slide level2">
-<h2>et le Deep learning</h2>
-
-<img data-src="reseau_neurones.jpg" class="quarto-figure quarto-figure-center r-stretch"></section>
+<p><img data-src="machine-learning-entrainement-ia.jpg" class="quarto-figure quarto-figure-center"> :::notes Avec le machine learning, on donne à la machine une grande quantité de donnée, et elle va trouver ‘toute seule’ cette règle, c’est pour ça qu’on dit qu’elle apprend. Elle apprend grace à un algorithme qui permet de traiter une (très) grande quantité de donnée pour en faire ressortir un schéma réccurent. :::</p>
+<!-- ## et le Deep learning -->
+<!-- ![](reseau_neurones.jpg){fig-align="center"} -->
+<!-- :::notes -->
+<!-- Le deep learning est un sous domaine du machine learning : globalement, il veut reproduire le cerveau humain grace à des neurones articifiels. très puissant en reconnaissance d'images par exemple. -->
+<p>:::</p>
+</section>
 <section id="les-différents-types-dapprentissage-automatique" class="slide level2">
 <h2>Les différents types d’apprentissage automatique</h2>
 <ol type="1">
@@ -385,102 +384,8 @@
 <li class="fragment"><p>L’apprentissage non supervisé</p></li>
 <li class="fragment"><p>L’apprentissage par essai/erreur</p></li>
 </ol>
-</section>
-<section id="non-supervisé-vs-supervisé" class="slide level2">
-<h2>Non supervisé VS supervisé</h2>
-<div class="panel-tabset">
-<ul id="tabset-1" class="panel-tabset-tabby"><li><a data-tabby-default="" href="#tabset-1-1">Non supervisé</a></li><li><a href="#tabset-1-2">Supervisé</a></li></ul>
-<div class="tab-content">
-<div id="tabset-1-1">
-<div class="cell">
-<div class="cell-output-display">
-<div>
-<table data-quarto-postprocess="true">
-<thead>
-<tr class="header">
-<th style="text-align: right;" data-quarto-table-cell-role="th">X1_surface</th>
-<th style="text-align: right;" data-quarto-table-cell-role="th">X2_pieces</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td style="text-align: right;">50</td>
-<td style="text-align: right;">3</td>
-</tr>
-<tr class="even">
-<td style="text-align: right;">30</td>
-<td style="text-align: right;">2</td>
-</tr>
-<tr class="odd">
-<td style="text-align: right;">25</td>
-<td style="text-align: right;">1</td>
-</tr>
-<tr class="even">
-<td style="text-align: right;">60</td>
-<td style="text-align: right;">4</td>
-</tr>
-<tr class="odd">
-<td style="text-align: right;">35</td>
-<td style="text-align: right;">1</td>
-</tr>
-</tbody>
-</table>
-
-
-</div>
-</div>
-</div>
-</div>
-<div id="tabset-1-2">
-<div class="cell">
-<div class="cell-output-display">
-<div>
-<table data-quarto-postprocess="true">
-<thead>
-<tr class="header">
-<th style="text-align: right;" data-quarto-table-cell-role="th">Y_prix</th>
-<th style="text-align: right;" data-quarto-table-cell-role="th">X1_surface</th>
-<th style="text-align: right;" data-quarto-table-cell-role="th">X2_pieces</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td style="text-align: right;">1000</td>
-<td style="text-align: right;">50</td>
-<td style="text-align: right;">3</td>
-</tr>
-<tr class="even">
-<td style="text-align: right;">800</td>
-<td style="text-align: right;">30</td>
-<td style="text-align: right;">2</td>
-</tr>
-<tr class="odd">
-<td style="text-align: right;">600</td>
-<td style="text-align: right;">25</td>
-<td style="text-align: right;">1</td>
-</tr>
-<tr class="even">
-<td style="text-align: right;">1000</td>
-<td style="text-align: right;">60</td>
-<td style="text-align: right;">4</td>
-</tr>
-<tr class="odd">
-<td style="text-align: right;">800</td>
-<td style="text-align: right;">35</td>
-<td style="text-align: right;">1</td>
-</tr>
-</tbody>
-</table>
-
-
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
 <aside class="notes">
-<p>En apprentissage non supervisée, les données ne sont pas étiquetées. Le but est de regrouper automatiquement les individus qui se ressemblent, et de leur trouver ensuite un nom qui les rassemblent : par exemple les grands logements vont être ensemble. Permet de faire de la classification automatique. En apprentissage supervisé, j’ai des données étiquetées (avec un Y) et le but est d’être capable de prédire Y à partir de ces données étiquetées.</p>
+<p>Dans ce module d’introduction, on va principalement étudier l’apprentissage supervisé. L’apprentissage non supervisé a été vu en partie dans le module sur la modélisation. Enfin, le dernier type d’apprentissage ne sera pas vu, c’est celui qui est utilisé pour simuler un joueur de jeu de go ou d’échec par exemple.</p>
 <style type="text/css">
         span.MJX_Assistive_MathML {
           position:absolute!important;
@@ -493,12 +398,212 @@
           display:block!important;
       }</style></aside>
 </section>
-<section id="but-de-lapprentissage-supervisé" class="slide level2">
-<h2>But de l’apprentissage supervisé</h2>
-<p>Il s’agit de trouver la fonction f qui va le mieux <strong>prédire</strong> Y en fonction de X1, X2…,Xn</p>
-<p><span class="math display">\[
+<section id="différence-entre-supervisé-et-non-supervisé" class="slide level2">
+<h2>Différence entre supervisé et non supervisé</h2>
+
+<img data-src="supervisé_nonsupervisé.png" class="quarto-figure quarto-figure-center r-stretch"><aside class="notes">
+<p>Dans le non supervisé, les données ne sont pas étiquetés. Le but pour la machine est de détecter les ressemblances entre les individus (cf module sur le clustering).</p>
+<p>Dans le supervisé, la machine apprend sur des données étiquetés (avec un Y). L’image a un nom, et le but est de faire en sorte que le modèle soit capable de prédire correctement une nouvelle image.</p>
+<p>Cette image vient du site suivant :</p>
+<p><a href="https://www.le-cortex.com/media/articles/lintelligence-artificielle-comment-ca-marche" class="uri">https://www.le-cortex.com/media/articles/lintelligence-artificielle-comment-ca-marche</a></p>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
+</section>
+<section id="but-de-lapprentissage-supervisé-la-prédiction" class="slide level2">
+<h2>But de l’apprentissage supervisé : la prédiction</h2>
+<ul>
+<li class="fragment"><p>Il s’agit de trouver la fonction f qui va le mieux <strong>prédire</strong> Y en fonction de X1, X2…,Xn</p></li>
+<li class="fragment"><p><span class="math display">\[
 Y = f(X_1, X_2, ...,X_n)
+\]</span></p></li>
+<li class="fragment"><p>Le but premier de l’apprentissage supervisé n’est pas d’expliquer (cf module sur les modélisation statistique), mais bien de prédire.</p></li>
+</ul>
+</section>
+<section id="différence-entre-régression-et-classification" class="slide level2">
+<h2>Différence entre régression et classification</h2>
+
+<img data-src="types_apprentissage.png" class="quarto-figure quarto-figure-center r-stretch"><aside class="notes">
+<p>Attention : en machine learning, dans un problème de régression (Y est quanti continu), je n’utilise pas nécessairement la régression linéaire (qui est un modèle parmi d’autres) comme modèle. Dans un problème de classification (Y est quali), je peux utiliser une régression logistique comme modèle pour apprendre.</p>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
+</section>
+<section id="prédire-ou-estimer" class="slide level2">
+<h2>Prédire ou estimer ?</h2>
+<div class="panel-tabset">
+<ul id="tabset-1" class="panel-tabset-tabby"><li><a data-tabby-default="" href="#tabset-1-1">Base de départ</a></li><li><a href="#tabset-1-2">Modèle</a></li><li><a href="#tabset-1-3">Estimations</a></li><li><a href="#tabset-1-4">Prévisions</a></li></ul>
+<div class="tab-content">
+<div id="tabset-1-1">
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<table data-quarto-postprocess="true">
+<thead>
+<tr class="header">
+<th style="text-align: left;" data-quarto-table-cell-role="th"></th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">Y_prix</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">X1_surface</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;">logement1</td>
+<td style="text-align: right;">1000</td>
+<td style="text-align: right;">50</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">logement2</td>
+<td style="text-align: right;">800</td>
+<td style="text-align: right;">30</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">logement3</td>
+<td style="text-align: right;">600</td>
+<td style="text-align: right;">25</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">logement4</td>
+<td style="text-align: right;">1000</td>
+<td style="text-align: right;">60</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">logement5</td>
+<td style="text-align: right;">800</td>
+<td style="text-align: right;">35</td>
+</tr>
+</tbody>
+</table>
+
+
+</div>
+</div>
+</div>
+</div>
+<div id="tabset-1-2">
+<p><span class="math display">\[
+Y = 416,5 + 10,6 X_1
 \]</span></p>
+</div>
+<div id="tabset-1-3">
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<table data-quarto-postprocess="true">
+<thead>
+<tr class="header">
+<th style="text-align: left;" data-quarto-table-cell-role="th"></th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">Y_prix</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">X1_surface</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">prix_estime</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;">logement1</td>
+<td style="text-align: right;">1000</td>
+<td style="text-align: right;">50</td>
+<td style="text-align: right;">945.9</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">logement2</td>
+<td style="text-align: right;">800</td>
+<td style="text-align: right;">30</td>
+<td style="text-align: right;">734.1</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">logement3</td>
+<td style="text-align: right;">600</td>
+<td style="text-align: right;">25</td>
+<td style="text-align: right;">681.2</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">logement4</td>
+<td style="text-align: right;">1000</td>
+<td style="text-align: right;">60</td>
+<td style="text-align: right;">1051.8</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">logement5</td>
+<td style="text-align: right;">800</td>
+<td style="text-align: right;">35</td>
+<td style="text-align: right;">787.1</td>
+</tr>
+</tbody>
+</table>
+
+
+</div>
+</div>
+</div>
+</div>
+<div id="tabset-1-4">
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<table data-quarto-postprocess="true">
+<thead>
+<tr class="header">
+<th style="text-align: left;" data-quarto-table-cell-role="th"></th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">surface</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">prix_prevu</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;">logement6</td>
+<td style="text-align: right;">45</td>
+<td style="text-align: right;">892.9</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">logement7</td>
+<td style="text-align: right;">30</td>
+<td style="text-align: right;">734.1</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">logement8</td>
+<td style="text-align: right;">110</td>
+<td style="text-align: right;">1581.2</td>
+</tr>
+</tbody>
+</table>
+
+
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<aside class="notes">
+<p>On cherche à prédire le prix d’un logement en fonction de sa surface. J’ai une base de données de 5 logements étiquetés (avec le prix) et une variable explicative (la surface). Il s’agit donc d’un problème de régression (et pas de classification).</p>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
 </section>
 <section id="les-étapes-de-lapprentissage-supervisé" class="slide level2">
 <h2>Les étapes de l’apprentissage supervisé :</h2>
@@ -579,102 +684,28 @@ Y = 416,5 + 10,6 X
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
-</section>
-<section id="estimations-ou-prévisions" class="slide level2">
-<h2>Estimations ou prévisions ?</h2>
-<div class="panel-tabset">
-<ul id="tabset-2" class="panel-tabset-tabby"><li><a data-tabby-default="" href="#tabset-2-1">Estimations</a></li><li><a href="#tabset-2-2">Prévisions</a></li></ul>
-<div class="tab-content">
-<div id="tabset-2-1">
-<div class="cell">
-<div class="cell-output-display">
-<div>
-<table data-quarto-postprocess="true">
-<thead>
-<tr class="header">
-<th style="text-align: left;" data-quarto-table-cell-role="th"></th>
-<th style="text-align: right;" data-quarto-table-cell-role="th">prix</th>
-<th style="text-align: right;" data-quarto-table-cell-role="th">surface</th>
-<th style="text-align: right;" data-quarto-table-cell-role="th">prix_estime</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td style="text-align: left;">logement1</td>
-<td style="text-align: right;">1000</td>
-<td style="text-align: right;">50</td>
-<td style="text-align: right;">945.8824</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">logement2</td>
-<td style="text-align: right;">800</td>
-<td style="text-align: right;">30</td>
-<td style="text-align: right;">734.1176</td>
-</tr>
-<tr class="odd">
-<td style="text-align: left;">logement3</td>
-<td style="text-align: right;">600</td>
-<td style="text-align: right;">25</td>
-<td style="text-align: right;">681.1765</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">logement4</td>
-<td style="text-align: right;">1000</td>
-<td style="text-align: right;">60</td>
-<td style="text-align: right;">1051.7647</td>
-</tr>
-<tr class="odd">
-<td style="text-align: left;">logement5</td>
-<td style="text-align: right;">800</td>
-<td style="text-align: right;">35</td>
-<td style="text-align: right;">787.0588</td>
-</tr>
-</tbody>
-</table>
-
-
-</div>
-</div>
-</div>
-</div>
-<div id="tabset-2-2">
-<div class="cell">
-<div class="cell-output-display">
-<div>
-<table data-quarto-postprocess="true">
-<thead>
-<tr class="header">
-<th style="text-align: left;" data-quarto-table-cell-role="th"></th>
-<th style="text-align: right;" data-quarto-table-cell-role="th">surface</th>
-<th style="text-align: right;" data-quarto-table-cell-role="th">prix_prevu</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td style="text-align: left;">logement6</td>
-<td style="text-align: right;">45</td>
-<td style="text-align: right;">892.9412</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">logement7</td>
-<td style="text-align: right;">30</td>
-<td style="text-align: right;">734.1176</td>
-</tr>
-<tr class="odd">
-<td style="text-align: left;">logement8</td>
-<td style="text-align: right;">110</td>
-<td style="text-align: right;">1581.1765</td>
-</tr>
-</tbody>
-</table>
-
-
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
+<!-- ## Non supervisé VS supervisé -->
+<!-- ::: panel-tabset -->
+<!-- ## Non supervisé -->
+<!-- ```{r} -->
+<!-- locations <- data.frame( -->
+<!--                         X1_surface = c(50,30,25,60,35), -->
+<!--                         X2_pieces = c(3,2,1,4,1)) -->
+<!-- kbl(locations, -->
+<!--     format = "html") -->
+<!-- ``` -->
+<!-- ## Supervisé -->
+<!-- ```{r} -->
+<!-- locations <- data.frame(Y_prix = c(1000,800,600,1000,800), -->
+<!--                         X1_surface = c(50,30,25,60,35), -->
+<!--                         X2_pieces = c(3,2,1,4,1)) -->
+<!-- kbl(locations, -->
+<!--     format = "html") -->
+<!-- ``` -->
+<!-- ::: -->
+<!-- ::: notes -->
+<!-- En apprentissage non supervisée, les données ne sont pas étiquetées. Le but est de regrouper automatiquement les individus qui se ressemblent, et de leur trouver ensuite un nom qui les rassemblent : par exemple les grands logements vont être ensemble. Permet de faire de la classification automatique. En apprentissage supervisé, j'ai des données étiquetées (avec un Y) et le but est d'être capable de prédire Y à partir de ces données étiquetées. -->
+<!-- ::: -->
 <div class="quarto-auto-generated-content">
 <div class="footer footer-default">
 
