--- a/inst/diapoML/intro_ml.html
+++ b/inst/diapoML/intro_ml.html
@@ -333,6 +333,11 @@
 </div>
 
 </section>
+<section>
+<section id="les-grands-principes" class="title-slide slide level1 center">
+<h1>Les grands principes</h1>
+
+</section>
 <section id="non-mais-cest-quoi-en-fait" class="slide level2">
 <h2>Non mais c’est quoi en fait ?</h2>
 
@@ -604,6 +609,11 @@ Y = 416,5 + 10,6 X_1
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
+</section></section>
+<section>
+<section id="les-grandes-étapes" class="title-slide slide level1 center">
+<h1>Les grandes étapes</h1>
+
 </section>
 <section id="les-étapes-de-lapprentissage-supervisé" class="slide level2">
 <h2>Les étapes de l’apprentissage supervisé :</h2>
@@ -611,7 +621,7 @@ Y = 416,5 + 10,6 X_1
 <li class="fragment"><p>Disposer d’une base de données étiquetée</p></li>
 <li class="fragment"><p>Nettoyer et explorer cette base de données</p></li>
 <li class="fragment"><p>Réserver une partie de la base pour l’apprentissage/test</p></li>
-<li class="fragment"><p>Apprendre des données avec des algorithmes</p></li>
+<li class="fragment"><p>Apprendre des données avec des modèles/algorithmes</p></li>
 <li class="fragment"><p>Comparer les performances prédictives de ces algorithmes</p></li>
 <li class="fragment"><p>Choisir le meilleur modèle et le mettre en production</p></li>
 </ol>
@@ -711,7 +721,7 @@ Y = 416,5 + 10,6 X
 
 </div>
 </div>
-</section>
+</section></section>
     </div>
   </div>
 
