--- a/inst/diapoML/intro_ml.html
+++ b/inst/diapoML/intro_ml.html
@@ -681,13 +681,25 @@ Y = 416,5 + 10,6 X_1
 <ul id="tabset-2" class="panel-tabset-tabby"><li><a data-tabby-default="" href="#tabset-2-1">Sous-Apprentissage</a></li><li><a href="#tabset-2-2">Sur-apprentissage</a></li><li><a href="#tabset-2-3">Bon modèle</a></li></ul>
 <div class="tab-content">
 <div id="tabset-2-1">
-<p><img data-src="sous_apprentissage.png" width="600"></p>
+<div class="quarto-figure quarto-figure-center">
+<figure>
+<p><img data-src="sous_apprentissage.png" class="quarto-figure quarto-figure-center" width="500"></p>
+</figure>
+</div>
 </div>
 <div id="tabset-2-2">
-<p><img data-src="sur-apprentissage.png" width="600"></p>
+<div class="quarto-figure quarto-figure-center">
+<figure>
+<p><img data-src="sur-apprentissage.png" class="quarto-figure quarto-figure-center" width="500"></p>
+</figure>
+</div>
 </div>
 <div id="tabset-2-3">
-<p><img data-src="apprentissage_adapté.png" width="600"></p>
+<div class="quarto-figure quarto-figure-center">
+<figure>
+<p><img data-src="apprentissage_adapté.png" class="quarto-figure quarto-figure-center" width="500"></p>
+</figure>
+</div>
 </div>
 </div>
 </div>
@@ -711,6 +723,10 @@ Y = 416,5 + 10,6 X_1
           display:block!important;
       }</style></aside>
 </section>
+<section id="le-compromis-biais-variance" class="slide level2">
+<h2>Le compromis biais-variance</h2>
+
+<img data-src="biais_variance.png" class="quarto-figure quarto-figure-center r-stretch"></section>
 <section id="autre-exemple" class="slide level2">
 <h2>Autre exemple</h2>
 
